--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,10 +3,10 @@ version: 0.2
 phases:
   pre_build:
     commands:
-      - $(aws ecr get-login-password --no-include-email --region us-east-1)
+      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 133893531589.dkr.ecr.us-east-1.amazonaws.com
   build:
     commands:
-      - docker build -t youtube:latest .
+      - docker build -t youtube .
       - docker tag youtube:latest 133893531589.dkr.ecr.us-east-1.amazonaws.com/youtube:latest
   post_build:
     commands:
